--- a/cw/templates/login.html
+++ b/cw/templates/login.html
@@ -39,7 +39,7 @@
                             <span class="input-group-text">
                                 <i class="fas fa-envelope text-primary"></i>
                             </span>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com" required name="uname">
+                            <input type="text" class="form-control" id="email" placeholder="name@example.com" required name="uname">
                         </div>
                     </div>
 
