--- a/cw/templates/admin/a_home.html
+++ b/cw/templates/admin/a_home.html
@@ -146,7 +146,7 @@
     <nav class="nav flex-column">
         <a class="nav-link active" href="../"><i class="fas fa-home me-2"></i>Dashboard</a>
         <a class="nav-link" href="quize"><i class="fas fa-tasks me-2"></i>Quizzes</a>
-        <a class="nav-link" href="#"><i class="fas fa-question-circle me-2"></i>Questions</a>
+        <a class="nav-link" href="qns"><i class="fas fa-question-circle me-2"></i>Questions</a>
         <a class="nav-link" href="#"><i class="fas fa-users me-2"></i>Users</a>
     </nav>
 </div>
